fix filter openning on mobile

--- a/assets/sass/organisms/_facet-sidebars.scss
+++ b/assets/sass/organisms/_facet-sidebars.scss
@@ -36,6 +36,22 @@
     height: 0;
     border-top: 1px solid $nobel;
   }
+
+  @media screen and (max-width: $screen-xs-max) {
+    width: 100%;
+    height: 0;
+    transition: opacity 0.3s 0.3s,
+                height 0.3s,
+                padding 0.3s;
+    &.open {
+      width: 100%;
+      height: auto;
+      transition: opacity 0.3s 0.3s,
+                  height 0.3s,
+                  padding 0.3s;
+      & + [class*="col-"] {width: 75%;}
+    }
+  }
 }
 
 .facet-sidebar {
